Ajustes front e back
