# routes/api.php
@@ -9,6 +9,8 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('auth')->group(function () {
     Route::post('register', [AuthController::class, 'register'])->middleware('throttle:5,15');
     Route::post('login', [AuthController::class, 'login'])->middleware('throttle:5,15');
+    Route::post('forgot-password', [AuthController::class, 'forgotPassword'])->middleware('throttle:5,15');
+    Route::post('reset-password', [AuthController::class, 'resetPassword'])->middleware('throttle:5,15');
 
     Route::middleware('auth:api')->group(function () {
         Route::post('logout', [AuthController::class, 'logout']);
